# computer-control-mcp-lands

./: .gitignore  Dockerfile  LICENSE  PUBLISH_GUIDE.md  README.md  pyproject.toml  release.py  requirements.txt  run_cli.py  run_server.py  setup.py  smithery.yaml  test_chrome_screenshot.py  test_screenshot.py
src/: README.md
src/computer_control_mcp/: __init__.py  __main__.py  cli.py  core.py  gui.py  server.py  test.py
tests/: README.md  conftest.py  test_computer_control.py
